# FastVecDB

./: .gitignore  LICENSE  README.md  pyproject.toml  test_basic.py  test_cache.py
examples/: __init__.py  all_features_with_HuggingFace.ipynb  basic_usage.py  batch_insert.py  cache_performance_demo.py  cache_quick_demo.py  rag_pipeline.py  similarity_metrics.py
fastvecdb/: __init__.py  api.py
fastvecdb/cache/: __init__.py  cache_manager.py  hot_vector_cache.py  neighborhood_cache.py  query_cache.py
fastvecdb/core/: __init__.py  similarity.py  storage.py  vector.py
fastvecdb/index/: __init__.py  bucket.py  router.py
images/: __init__.py
